--- a/trunk/src/Tests/WaveletStudio.Tests/WaveletStudio.Tests.csproj
+++ b/trunk/src/Tests/WaveletStudio.Tests/WaveletStudio.Tests.csproj
@@ -48,10 +48,11 @@
     <Compile Include="Blocks\BlockListTest.cs" />
     <Compile Include="Blocks\BlocksConnectionTest.cs" />
     <Compile Include="Blocks\ConvolutionBlockTest.cs" />
+    <Compile Include="Blocks\UpSampleBlockTest.cs" />
     <Compile Include="Blocks\ImportFromTextBlockTest.cs" />
     <Compile Include="Blocks\SignalExtensionBlockTest.cs" />
     <Compile Include="Blocks\ExportToCSVBlockTest.cs" />
-    <Compile Include="Blocks\WaveletBlockTest.cs" />
+    <Compile Include="Blocks\DWTBlockTest.cs" />
     <Compile Include="Blocks\SampleBasedOperationBlockTest.cs" />
     <Compile Include="Blocks\RampBlockTest.cs" />
     <Compile Include="Blocks\FFTBlockTest.cs" />
