--- a/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
+++ b/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
@@ -248,6 +248,12 @@
   <ItemGroup>
     <None Include="Resources\textmini.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\upsamplemini.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\upsample.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
