--- a/trunk/src/WaveletStudio/WaveletStudio.csproj
+++ b/trunk/src/WaveletStudio/WaveletStudio.csproj
@@ -43,10 +43,12 @@
     <Compile Include="Blocks\BlockNodeBase.cs" />
     <Compile Include="Blocks\BlockOutputNode.cs" />
     <Compile Include="Blocks\ConvolutionBlock.cs" />
+    <Compile Include="Blocks\IDWTBlock.cs" />
+    <Compile Include="Blocks\UpSampleBlock.cs" />
     <Compile Include="Blocks\ImportFromTextBlock.cs" />
     <Compile Include="Blocks\ExportToCSVBlock.cs" />
     <Compile Include="Blocks\SignalExtensionBlock.cs" />
-    <Compile Include="Blocks\WaveletBlock.cs" />
+    <Compile Include="Blocks\DWTBlock.cs" />
     <Compile Include="Blocks\ImportFromCSVBlock.cs" />
     <Compile Include="Blocks\SampleBasedOperationBlock.cs" />
     <Compile Include="Blocks\RampFunctionBlock.cs" />
@@ -60,6 +62,7 @@
     <Compile Include="Blocks\BlockList.cs" />
     <Compile Include="Blocks\BlockInputNode.cs" />
     <Compile Include="Blocks\ScalarOperationBlock.cs" />
+    <Compile Include="Blocks\WaveletBlock.cs" />
     <Compile Include="FFT\ManagedFft.cs" />
     <Compile Include="Functions\WaveMath_Operations.cs" />
     <Compile Include="MemoryPool.cs" />
@@ -76,7 +79,7 @@
     <Compile Include="Functions\WaveMath_General.cs" />
     <Compile Include="Signal.cs" />
     <Compile Include="Wavelet\MotherWavelet.cs" />
-    <Compile Include="Wavelet\Dwt.cs" />
+    <Compile Include="Wavelet\DWT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignalExtension.cs" />
   </ItemGroup>
