--- a/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
+++ b/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
@@ -266,6 +266,12 @@
   <ItemGroup>
     <None Include="Resources\imgdwtmini1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\imgabsolute.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\imgabsolutemini.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
