--- a/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
+++ b/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
@@ -272,6 +272,24 @@
   <ItemGroup>
     <None Include="Resources\imgabsolutemini.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\imgshiftmini.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\imgshift.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\imgunique.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\imguniquemini.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\imginvert.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\imginvertmini.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
