--- a/trunk/src/Tests/WaveletStudio.Tests/WaveletStudio.Tests.csproj
+++ b/trunk/src/Tests/WaveletStudio.Tests/WaveletStudio.Tests.csproj
@@ -45,10 +45,14 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Blocks\BlockBaseTests.cs" />
     <Compile Include="Blocks\BlockListTest.cs" />
     <Compile Include="Blocks\BlocksConnectionTest.cs" />
     <Compile Include="Blocks\ConvolutionBlockTest.cs" />
     <Compile Include="Blocks\AbsoluteValueBlockTest.cs" />
+    <Compile Include="Blocks\UniqueBlockTest.cs" />
+    <Compile Include="Blocks\ShiftBlockTest.cs" />
+    <Compile Include="Blocks\InvertBlockTest.cs" />
     <Compile Include="Blocks\IDWTBlockTest.cs" />
     <Compile Include="Blocks\UpSampleBlockTest.cs" />
     <Compile Include="Blocks\ImportFromTextBlockTest.cs" />
@@ -65,6 +69,10 @@
     <Compile Include="Blocks\GenerateSignalBlockTest.cs" />
     <Compile Include="Blocks\ImportFromCSVBlockTest.cs" />
     <Compile Include="FFT\ManagedFFTTests.cs" />
+    <Compile Include="Functions\WaveMathConvolutionTests.cs" />
+    <Compile Include="Functions\WaveMathInterpolationTests.cs" />
+    <Compile Include="Functions\WaveMathOperationTests.cs" />
+    <Compile Include="Functions\WaveMathStatisticsTests.cs" />
     <Compile Include="SignalGeneration\BinaryTest.cs" />
     <Compile Include="SignalGeneration\CosineTest.cs" />
     <Compile Include="SignalGeneration\SawtoothTest.cs" />
@@ -79,7 +87,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignalExtensionTests.cs" />
     <Compile Include="SignalTests.cs" />
-    <Compile Include="Functions\WaveMathTests.cs" />
+    <Compile Include="Functions\WaveMathGeneralTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\WaveletStudio\WaveletStudio.csproj">
