--- a/trunk/src/WaveletStudio/WaveletStudio.csproj
+++ b/trunk/src/WaveletStudio/WaveletStudio.csproj
@@ -69,7 +69,10 @@
     <Compile Include="Blocks\ScalarOperationBlock.cs" />
     <Compile Include="Blocks\WaveletBlock.cs" />
     <Compile Include="FFT\ManagedFft.cs" />
+    <Compile Include="Functions\WaveMath_Convolution.cs" />
+    <Compile Include="Functions\WaveMath_Interpolation.cs" />
     <Compile Include="Functions\WaveMath_Operations.cs" />
+    <Compile Include="Functions\WaveMath_Statistics.cs" />
     <Compile Include="MemoryPool.cs" />
     <Compile Include="SignalGeneration\Binary.cs" />
     <Compile Include="SignalGeneration\Sine.cs" />
