--- a/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
+++ b/trunk/src/WaveletStudio.MainApplication/WaveletStudio.MainApplication.csproj
@@ -290,6 +290,12 @@
   <ItemGroup>
     <None Include="Resources\imginvertmini.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\imginterpolation.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\imginterpolationmini.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
