--- a/trunk/src/WaveletStudio.MainApplication/app.config
+++ b/trunk/src/WaveletStudio.MainApplication/app.config
@@ -14,6 +14,27 @@
             <setting name="AutoShowBlockSetupForm" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="PrintGrid" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="PrintAllowStretch" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="PrintMarginTop" serializeAs="String">
+                <value>2.5</value>
+            </setting>
+            <setting name="PrintMarginLeft" serializeAs="String">
+                <value>2.5</value>
+            </setting>
+            <setting name="PrintMarginBottom" serializeAs="String">
+                <value>2.5</value>
+            </setting>
+            <setting name="PrintMarginRight" serializeAs="String">
+                <value>2.5</value>
+            </setting>
+            <setting name="PrintLandscape" serializeAs="String">
+                <value>True</value>
+            </setting>
         </WaveletStudio.MainApplication.Properties.Settings>
     </userSettings>
 </configuration>
