--- a/trunk/src/WaveletStudio.MainApplication/app.config
+++ b/trunk/src/WaveletStudio.MainApplication/app.config
@@ -35,6 +35,12 @@
             <setting name="PrintLandscape" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="Language" serializeAs="String">
+                <value>-</value>
+            </setting>
+            <setting name="Theme" serializeAs="String">
+                <value>-</value>
+            </setting>
         </WaveletStudio.MainApplication.Properties.Settings>
     </userSettings>
 </configuration>
