--- a/trunk/src/WaveletStudio.MainApplication/Properties/Settings.settings
+++ b/trunk/src/WaveletStudio.MainApplication/Properties/Settings.settings
@@ -32,5 +32,11 @@
     <Setting Name="PrintLandscape" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="Language" Type="System.String" Scope="User">
+      <Value Profile="(Default)">-</Value>
+    </Setting>
+    <Setting Name="Theme" Type="System.String" Scope="User">
+      <Value Profile="(Default)">-</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
