#1275 - Support Parallelism in ManagedFft #1182 - Scale Block Added function "GetSampleIndexByTime" in Signal class Added functions "IsPowerOf2" and "IsPowerOf2" to WaveMath (General)

--- a/trunk/src/WaveletStudio.Designer/WaveletStudio.Designer.csproj
+++ b/trunk/src/WaveletStudio.Designer/WaveletStudio.Designer.csproj
@@ -451,6 +451,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
+    <None Include="Resources\imgscalemini.png" />
+    <None Include="Resources\imgscale.png" />
     <None Include="Resources\imgoperation1.png" />
     <None Include="Resources\operation_scalar1.png" />
     <None Include="Resources\csv2.png" />
