--- a/trunk/src/Tests/WaveletStudio.Tests/WaveletStudio.Tests.csproj
+++ b/trunk/src/Tests/WaveletStudio.Tests/WaveletStudio.Tests.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Blocks\BlocksConnectionTest.cs" />
     <Compile Include="Blocks\ConvolutionBlockTest.cs" />
     <Compile Include="Blocks\AbsoluteValueBlockTest.cs" />
+    <Compile Include="Blocks\ScaleBlockTest.cs" />
     <Compile Include="Blocks\CustomAttributes\GlobalizedObjectTest.cs" />
     <Compile Include="Blocks\CustomAttributes\GlobalizedPropertyDescriptorTest.cs" />
     <Compile Include="Blocks\CustomAttributes\Mocks.cs" />
